--- a/cashflow-frontend/package.json
+++ b/cashflow-frontend/package.json
@@ -13,16 +13,16 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "lint": "next lint"
+},
+
   "eslintConfig": {
     "extends": [
       "react-app",
